# wAIting

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG-v2-fixes.md  CHANGES-INVESTIGATION-2026-01-04.md  CHANGES.md  CLAUDE.md  COVERAGE_REPORT.md  DEBUG-AUDIO-STATE.sh  DEBUGGING.md  DISTRIBUTION.md  ENGINEERING_GUIDE.md  ISSUES.md  Makefile  ONE_SHOT_PROMPT.md  OVERVIEW.md  PERFORMANCE.md  PHASE5_SUMMARY.md  PLAN.md  PRD.md  PROGRESS-2026-01-04.md  README.md  REFINEMENT_COMPLETE.txt  REVIEW_COMPLETED.md  STATUS.md  TEST_APPROVAL.txt  TEST_BELL.txt  TEST_IMMEDIATE_STOP.txt  TEST_MONITORING_FIX.txt  TEST_RAPID_PERMISSIONS.txt  TEST_SESSION4.txt  conversation-claude-agents.txt  info.md  pyproject.toml  requirements.txt
docs/: AUDIO-FIX-TECHNICAL-DEEP-DIVE.md  BELL-NOTIFICATION-SYSTEM-ANALYSIS.md  CLEANUP-PLAN-v2.3.1.md  DEVELOPMENT.md  DEV_TESTING_GUIDE.md  INSTALLATION.md  MAC_INSTALL.md  NEXT-AGENT-CONTEXT.md  PKILL_FIX.md  PLATFORM_SETUP.md  Project-status-main-context-1-1-26.md  QUICKSTART.md  RACE_CONDITION_OPTIONS.md  README.md  USAGE.md  USER-GUIDE.md  UX.md  V2.3.2-PROCESS-NAME-KILL-FIX.md  fix-bell-while-active-plan.md  fixing-bell-constantly-going.md  functional-test-plan.md  implement-custom-bell-plan.md  interactive-mode-detection-plan.md  macos-accuracy-improvements.md  plan-true-detection-option1.md  progress-check-jan-2026.md
plans/: ARCHITECTURE.md  CRITICAL_FINDINGS.md  HOOK_SPECS_REFERENCE.md  IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  REFINEMENT_SUMMARY.md  TASK_BREAKDOWN.md  pm-user-stories.md
tests/: __init__.py  conftest.py  test_utils.py  (+3 more)
(+70 files in other folders)
