[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waiting"
version = "0.1.0"
description = "Audio notification system for Claude Code"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
waiting = "waiting.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
